refactor: Update swagger docs
