# docs/swagger.json
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.RegisterUserCommand"
+                            "$ref": "#/definitions/auth.LoginUserCommand"
                         }
                     }
                 ],
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.RegisterUserResponse"
+                            "$ref": "#/definitions/auth.LoginUserResponse"
                         }
                     }
                 }
@@ -261,6 +261,82 @@
                 }
             }
         },
+        "/video/api/v1/like": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "video"
+                ],
+                "summary": "Like video by user.",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/video.LikeVideoCommand"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/video.LikeVideoResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/video/api/v1/unlike": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "video"
+                ],
+                "summary": "Unlike video by user.",
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/video.UnLikeVideoCommand"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/video.UnLikeVideoResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/video/api/v1/video/upload": {
             "post": {
                 "security": [
@@ -301,6 +377,27 @@
         }
     },
     "definitions": {
+        "auth.LoginUserCommand": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "password"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "username01"
+                }
+            }
+        },
+        "auth.LoginUserResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "auth.RegisterUserCommand": {
             "type": "object",
             "properties": {
@@ -427,6 +524,34 @@
             }
         },
         "video.CreateVideoResponse": {
+            "type": "object"
+        },
+        "video.LikeVideoCommand": {
+            "type": "object",
+            "properties": {
+                "userId": {
+                    "type": "integer"
+                },
+                "videoId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "video.LikeVideoResponse": {
+            "type": "object"
+        },
+        "video.UnLikeVideoCommand": {
+            "type": "object",
+            "properties": {
+                "userId": {
+                    "type": "integer"
+                },
+                "videoId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "video.UnLikeVideoResponse": {
             "type": "object"
         },
         "video.UploadVideoCommand": {
